// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render default 1`] = `
<dl class="HValue"><dt class="label"></dt>
  <dd class="value-wrapper">
    <!----> <span class="value _na">
      N/A
    </span></dd>
</dl>
`;

exports[`render with down trend 1`] = `
<dl class="HValue"><dt class="label">Strength</dt>
  <dd class="value-wrapper">
    <v-icon-stub name="caret-down" class="change-decrease"></v-icon-stub> <span class="value">
      100
    </span>
  </dd>
</dl>
`;

exports[`render with label and value 1`] = `
<dl class="HValue"><dt class="label">Strength</dt>
  <dd class="value-wrapper">
    <!----> <span class="value">
      100
    </span></dd>
</dl>
`;

exports[`render with up trend 1`] = `
<dl class="HValue"><dt class="label">Strength</dt>
  <dd class="value-wrapper">
    <v-icon-stub name="caret-up" class="change-increase"></v-icon-stub> <span class="value">
      100
    </span>
  </dd>
</dl>
`;
